add swagger support for model